# DigitalDealsStats

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: jobs.py  main.py  warmup.py  worker.py
app/api/routes/: __init__.py  analyze.py  ddcrm_internal.py  v2.py  web.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/schemas/: analyze.py  v2.py
app/services/: analyzer.py  analyzer_history_tables.py  analyzer_market_metrics.py  analyzer_progress.py  catalog_cache.py  funpay_client.py  ggsell_client.py  global_analyzer.py  http_client.py  i18n.py  network_settings.py  platimarket_client.py  playerok_client.py  proxy.py  proxy_utils.py  text_utils.py
app/services/marketplaces/: __init__.py  base.py  funpay_provider.py  ggsell_provider.py  platimarket_analytics.py  platimarket_provider.py  platimarket_scope.py  playerok_analytics.py  playerok_provider.py  registry.py
app/web/: index.html
app/web/static/: index.css  index.js
app/web/static/js/: charts_tables.js  core.js  filters_catalogs.js  runtime.js
app/web/static/js/modules/: actions.js  api.js  charts.js  main.js  render.js  state.js
docs/: API_V2.md  IMPLEMENTATION.md  MODULES.md
tests/: test_ddcrm_internal_api.py  test_demand.py  test_empty_query.py  test_market_analytics.py  test_options.py  test_platimarket_client_parsing.py  test_playerok_client_parsing.py  test_proxy.py  test_proxy_input_normalization.py  test_section_coverage.py  test_text_utils.py  test_v2_api.py  test_v2_registry_and_overview.py
(+2 files in other folders)
