[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "funpaystat"
version = "0.1.0"
description = "MVP аналитики предложений FunPay (аналог wordstat) с режимом анализа спроса по отзывам."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "selectolax>=0.3.21,<1.0.0",
    "lxml>=6.0.0,<7.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.16.0,<2.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "redis>=6.0.0,<7.0.0",
    "rq>=2.5.0,<3.0.0",
    "orjson>=3.11.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
